--- a/cont_frontend_solo_project/css/mainPageStyle.css
+++ b/cont_frontend_solo_project/css/mainPageStyle.css
@@ -1,1 +1,72 @@
+body{
+    width: 100vw;
+    height: 100vh;
+    background-image: url(../source/main-cosmos.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+/* Header */
+body  *{
+    box-sizing: border-box;
+    position: relative;
+    border: 4px solid white;
+}
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10%;
+    z-index: 10;
+    padding: 10px 10px;
+}
 
+/* Main Content */
+main {
+    width: 99%;
+    height: 60%;
+    left: 1%;
+    bottom:-12%;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+}
+
+section {
+    width: 60%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+}
+
+aside {
+    width: 40%;
+    height: 100%;
+}
+
+.moveBox {
+    width: 100%;
+    height: 90%;
+    border: 4px solid white;
+}
+
+
+/* Footer */
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 25%;
+    z-index: 10;
+}
+
+#moveBox5{
+    color: white;
+    font-size: 50px;
+}
