--- a/cont_frontend_solo_project/css/mainPageStyle.css
+++ b/cont_frontend_solo_project/css/mainPageStyle.css
@@ -9,7 +9,6 @@ body{
 /* Header */
 body  *{
     box-sizing: border-box;
-    position: relative;
     border: 4px solid white;
 }
 header {
@@ -41,6 +40,7 @@ section {
     top: 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-gap: 10px;
 }
 
@@ -51,10 +51,37 @@ aside {
 
 .moveBox {
     width: 100%;
-    height: 90%;
-    border: 4px solid white;
+    height: 100%;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 50px;
 }
-
+#moveBox1{
+    background-image: url(../source/planet/planet5_transparent.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#moveBox9{
+    background-image: url(../source/planet/planet2_transparent.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#moveBox3{
+    background-image: url(../source/planet/planet4_transparent.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#moveBox7{
+    background-image: url(../source/planet/planet6_transparent.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.moveBox:hover{
+    background-color: darkgoldenrod;
+}
 
 /* Footer */
 footer {
@@ -64,9 +91,4 @@ footer {
     width: 100%;
     height: 25%;
     z-index: 10;
-}
-
-#moveBox5{
-    color: white;
-    font-size: 50px;
 }
