--- a/cont_frontend_solo_project/css/openingStyle_ver2.css
+++ b/cont_frontend_solo_project/css/openingStyle_ver2.css
@@ -6,6 +6,7 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
  /* 무대 컨테이너  */
 .stage-container{
     width: 100vw;
@@ -33,6 +34,9 @@
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
+
+/* 기타요소 배치 */
+
 #ceil-curtain{
     width: 100%;
     height: 100%;
