--- a/cont_frontend_solo_project/css/main_toy_animation.css
+++ b/cont_frontend_solo_project/css/main_toy_animation.css
@@ -214,3 +214,14 @@
         width: 70%;
     } 
 }
+
+
+
+@keyframes rotate-light {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
