--- a/cont_frontend_solo_project/css/main_toy.css
+++ b/cont_frontend_solo_project/css/main_toy.css
@@ -97,3 +97,31 @@
     flex-wrap: wrap;
     margin: 10px;
 }
+.content5{
+    width: 30vw;
+    height: 30vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.behind-light {
+    width: 200%;
+    height: 200%;
+    left: -50%;
+    top: -50%;
+    background-image: url(../source/main-duck-behind-light.png);
+    animation: rotate-light 4s linear infinite forwards;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    position: absolute;
+}
+.duck{
+    width: 100%;
+    height: 100%;
+    background-image: url(../source/main-duck-lstand.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;    
+    position: relative;
+}
