--- a/cont_frontend_solo_project/css/duckroom_style.css
+++ b/cont_frontend_solo_project/css/duckroom_style.css
@@ -112,3 +112,8 @@ main {
   font-size: 70px;
   text-align: center;
 }
+.keyFont{
+  opacity: 1 !important;
+  font-size: 70px;
+  text-align: center;
+}
