--- a/cont_frontend_solo_project/css/mainResponsiveQuery.css
+++ b/cont_frontend_solo_project/css/mainResponsiveQuery.css
@@ -29,6 +29,9 @@
     #ceil-curtain{
         display: none;
     }
+    #keypad{
+        display: none;
+    }
 }
 
 @media screen and ( max-width : 700px)  {
