--- a/cont_frontend_solo_project/css/mainResponsiveQuery.css
+++ b/cont_frontend_solo_project/css/mainResponsiveQuery.css
@@ -75,3 +75,21 @@
         margin: 10px;
     }
 }
+@media screen and (max-height:911px) {
+    #keypad{
+        display: none;
+    }
+}
+@media screen and ( max-width : 500px)  {
+    .sub-text{
+        display: none;
+    }
+    #showTime{
+        font-size: 1.3em;
+    }
+}
+@media screen and (max-height:580px) {
+    .sub-text{
+        display: none;
+    }
+}
