--- a/self_project_for_frontend/public/style/index-style.css
+++ b/self_project_for_frontend/public/style/index-style.css
@@ -1,9 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
-
 html, body {
-  height: 300vh;
-  font-family: 'Space Mono', sans-serif; 
-  background-color: #B5FE83; 
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  font-family: 'Space Mono', sans-serif;
+}
+.start-screen {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 7rem;
+  text-align: center;
+  background: linear-gradient(to bottom, #182f42, #12171b);
 }
 
 .header {
@@ -12,12 +20,13 @@ html, body {
   background-color: #FFF;
   top: 0;
   width: 100%;
-  height: 4vh;
+  height: 5vh;
   border-bottom: 1px solid #191919;
   display: flex;
   align-items: center;
+  box-sizing: border-box; 
   padding-left: 5vh;
-  font-size: 2vh;
+  font-size: 1.2rem;
 }
 
 .main-container {
@@ -60,7 +69,7 @@ html, body {
   height: 6vh;
   display: flex;
   align-items: center;
-  font-size: 2vh;
+  font-size: 1.2rem;
   padding-left: 3vh;
 }
 
@@ -68,6 +77,7 @@ html, body {
   height: 94vh;
   display: flex;
   justify-content: flex-end;
+  background-color: coral;
 }
 
 .content > img {
@@ -75,4 +85,8 @@ html, body {
   height: 60vh;
   object-fit: cover;
   margin: 5vh 20vh 0 0;
+}
+
+canvas {
+  display: block;
 }
