--- a/self_project_for_frontend/views/partials/head.ejs
+++ b/self_project_for_frontend/views/partials/head.ejs
@@ -1,10 +1,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- bootstrap CDN
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://kit.fontawesome.com/14db1d786f.js" crossorigin="anonymous"></script>
+
     <title> Self frontend project </title>
 
     <link rel="icon" href="/source/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="/style/style.css">
+    <!-- custom CSS -->
     <link rel="stylesheet" href="/style/reset.css">
+    <link rel="stylesheet" href="/style/index-style.css">
+    <link rel="stylesheet" href="/style/index-stackwindow.css">
+    <link rel="stylesheet" href="/style/header.css">
 </head>
