--- a/self_project_for_frontend/views/partials/tail.ejs
+++ b/self_project_for_frontend/views/partials/tail.ejs
@@ -4,3 +4,4 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="/js/folder-scroll-animation.js"></script>
+  <script src="/js/digit-clock.js"></script>
