--- a/self_project_for_frontend/views/index.ejs
+++ b/self_project_for_frontend/views/index.ejs
@@ -6,9 +6,7 @@
   <%- include('partials/stack-window')%>
   <main class="main-container">
     <section class="sticky">
-      <div class="sticky-title"> 여기엔 뭘 넣지
-
-      </div>
+      <%- include('partials/project-carousel')%>
       <article class="article article-1">
         <div class="title"> 넣을거 1</div>
         <div class="content">
