--- a/self_project_for_frontend/views/partials/head.ejs
+++ b/self_project_for_frontend/views/partials/head.ejs
@@ -18,4 +18,5 @@
     <link rel="stylesheet" href="/style/index-style.css">
     <link rel="stylesheet" href="/style/index-stackwindow.css">
     <link rel="stylesheet" href="/style/header.css">
+    <link rel="stylesheet" href="/style/project-carouesl.css">
 </head>
