--- a/self_project_for_frontend/views/index.ejs
+++ b/self_project_for_frontend/views/index.ejs
@@ -10,7 +10,7 @@
       <article class="article article-1">
         <div class="title"> 넣을거 1</div>
         <div class="content">
-          <div class="city wether">
+          <div class="city weather">
             <div class="citycontainer"></div>
           </div>
         </div>
