--- a/self_project_for_frontend/views/partials/project-carousel.ejs
+++ b/self_project_for_frontend/views/partials/project-carousel.ejs
@@ -1,52 +1,18 @@
 <div class="sticky-title">
   <div class="project-carousel-wrapper">
     <div class="project-carousel-container">
-      <div class="project-carousel-lbutton"></div>
-      <div class="project-carousel-itmem project-carousel-item1"></div>
-      <div class="project-carousel-itmem project-carousel-item2"></div>
-      <div class="project-carousel-itmem project-carousel-item3"></div>
-      <div class="project-carousel-itmem project-carousel-item4"></div>
-      <div class="project-carousel-rbutton"></div>
-      <div class="project-carousel-button-wrapper"> 
-        <div class="project-carousel-botton-button" id="project-carousel-botton-button1"></div> 
-        <div class="project-carousel-botton-button" id="project-carousel-botton-button2"></div> 
-        <div class="project-carousel-botton-button" id="project-carousel-botton-button3"></div> 
-        <div class="project-carousel-botton-button" id="project-carousel-botton-button4"></div>
-      </div>
-     </div>
+      <div class="project-carousel-item" id="project-carousel-item1" style="background-color: aqua;"></div>
+      <div class="project-carousel-item" id="project-carousel-item2" style="background-color: orange;"></div>
+      <div class="project-carousel-item" id="project-carousel-item3" style="background-color: rgb(255, 226, 129);"></div>
+      <div class="project-carousel-item" id="project-carousel-item4" style="background-color: rgb(59, 255, 141);"></div>
+    </div>
+    <div class="project-carousel-lbutton"></div>
+    <div class="project-carousel-button-wrapper"> 
+      <div class="project-carousel-button" id="project-carousel-button1"></div> 
+      <div class="project-carousel-button" id="project-carousel-button2"></div> 
+      <div class="project-carousel-button" id="project-carousel-button3"></div> 
+      <div class="project-carousel-button" id="project-carousel-button4"></div>
+    </div>
+    <div class="project-carousel-rbutton"></div>
   </div>
 </div>
-<script>
-  const carouselContainer = document.querySelector('.project-carousel-container');
-const leftButton = document.querySelector('.project-carousel-lbutton');
-const rightButton = document.querySelector('.project-carousel-rbutton');
-const bottomButtons = document.querySelectorAll('.project-carousel-bottom-button');
-
-let currentIndex = 0;
-
-function updateCarousel() {
-  const offset = -currentIndex * 100;
-  carouselContainer.style.transform = `translateX(${offset}vw)`;
-}
-
-leftButton.addEventListener('click', () => {
-  if (currentIndex > 0) {
-    currentIndex--;
-    updateCarousel();
-  }
-});
-
-rightButton.addEventListener('click', () => {
-  if (currentIndex < bottomButtons.length - 1) {
-    currentIndex++;
-    updateCarousel();
-  }
-});
-
-bottomButtons.forEach((button, index) => {
-  button.addEventListener('click', () => {
-    currentIndex = index;
-    updateCarousel();
-  });
-});
-</script>
