--- a/self_project_for_frontend/views/partials/tail.ejs
+++ b/self_project_for_frontend/views/partials/tail.ejs
@@ -1,7 +1,7 @@
 <!-- add js link -->
-  <!-- Bootstrap JS and Popper.js CDN -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="/js/folder-scroll-animation.js"></script>
-  <script src="/js/digit-clock.js"></script>
+  <script src="/sc/folder-scroll-animation.js"></script>
+  <script src="/sc/digit-clock.js"></script>
+  <script src="/sc/project-carousel.js"></script>
